--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
@@ -17,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
     "react-tabs": "^6.0.2",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
